--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 </nav>
 
                 <main class="hotel-view">
+                    <!--Gallery images-->
                     <div class="gallery">
                         <figure class="gallery__item">
                             <img src="img/hotel-1.jpg" alt="Photo of hotel 1" class="gallery__photo">
@@ -104,6 +105,7 @@
                         </figure>
                     </div>
 
+                    <!--Hotel overview-->
                     <div class="overview">
                         <h1 class="overview__heading">
                             Hotel Las Palmas
@@ -140,6 +142,18 @@
                         </div>
 
                     </div>
+                        
+                    <!--Details - description and user reviews-->
+                    <div class="detail">
+                        <div class="description">
+
+                        </div>
+
+                        <div class="user-reviews">
+                            User reviews
+                        </div>
+                    </div>
+
                 </main>
             </div>
         </div>
