--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                        <p class="review__user-name">Nick Smith</p>
                                        <p class="review__user-date">Feb 23rd, 2020</p>
                                    </div>
-                                   <div class="review__rating">7.8</div>
+                                   <div class="review__user-rating">7.8</div>
                                </figcaption>
                             </figure>
 
@@ -201,9 +201,11 @@
                                        <p class="review__user-name">Mary Thomas</p>
                                        <p class="review__user-date">Sept 13th, 2020</p>
                                    </div>
-                                   <div class="review__rating">9.3</div>
+                                   <div class="review__user-rating">9.3</div>
                                </figcaption>
                             </figure>
+
+                            <button class="btn-inline">Show all <span>&rarr;</span></button>
                         </div>
                     </div>
                 </main>
